# raisimGym_imitation

./: README.md
DRL03_files/raisimGymMeta/: setup.py
DRL03_files/result/: DRL_memo.txt
DRL03_files/subject_exp/subject01/: subject01_scaling.osim
DRL03_files/subject_exp/subject02/: subject02_scaling.osim
DRL03_files/subject_exp/subject03/: subject03_scaling.osim
DRL03_files/subject_exp/subject06/: subject06_scaling.osim  subject06_scaling_new.osim  subject06_scaling_new_MG_20210604.urdf
amp_examples/20210606/examples/: CMakeLists.txt
amp_examples/20210606/examples/src/server/: amp_motion_backup2.cpp
examples/: CMakeLists.txt
examples/src/server/: AMP_data.cpp  full_body.cpp  full_body_0603.cpp  full_body_sub02.cpp  full_body_sub_ref_test.cpp  full_body_treadmill_0311.cpp  only_treadmill.cpp  treadmill.cpp  treadmill_0329.cpp  treadmill_0411.cpp  treadmill_urdf.cpp
matlab_AMP/data_merge/: memo.txt  raisim_merge.m
matlab_AMP/data_test/: main.m
motion_classification/: class_classification.py  motion_classification_main.py  motion_classification_test.py  runnerMod_AMP_test.py
pyqt_mingi/: README.md  main.py
raisimGymMeta/: README.md
raisimGymTorchAMP/: README.md
raisimGymTorchAMP/raisimGymTorch/env/: RaisimGymEnv.hpp  RaisimGymVecEnv.py  VectorizedEnvironment.hpp  raisim_gym.cpp
raisimGymTorchAMP/runs/Aug10_11-05-55_mingi/: events.out.tfevents.1628561155.mingi.10690.0
raisimGymTorchAMP/runs/Aug10_11-17-53_mingi/: events.out.tfevents.1628561873.mingi.11872.0
raisimGymTorchAMP/runs/Aug10_11-29-37_mingi/: events.out.tfevents.1628562577.mingi.13135.0
raisimGymTorchAMP/runs/Aug10_11-31-58_mingi/: events.out.tfevents.1628562718.mingi.13857.0
raisimGymTorchAMP/runs/Aug10_11-32-08_mingi/: events.out.tfevents.1628562728.mingi.14061.0
raisimGymTorchAMP/runs/Aug10_12-16-36_mingi/: events.out.tfevents.1628565396.mingi.15550.0
raisimGymTorchAMP/runs/Aug10_12-20-03_mingi/: events.out.tfevents.1628565603.mingi.16101.0
raisimGymTorchAMP/runs/Aug10_12-20-39_mingi/: events.out.tfevents.1628565639.mingi.16562.0
raisimGymTorchAMP/runs/Aug10_12-22-10_mingi/: events.out.tfevents.1628565730.mingi.17229.0
raisimGymTorchBio/: README.md  Treadmill_vertical_sin_test_pdcontrol2.json  Treadmill_yes_run_0_01_30urdf_friction_2.json  Treadmill_yes_run_0_01_30urdf_friction_3.json  Treadmill_yes_run_30urdf_friction_0411.json  Treadmill_yes_walk_0_01_30urdf_friction.json  Treadmill_yes_walk_30urdf_friction_0411.json
raisimGymTorchBio/pyqt_model_runner/: Environment_PD_tuning_newnew.hpp  Environment_gv_ref.hpp  Environment_yes_treadmill_ISB_run.hpp  Environment_yes_treadmill_ISB_walk.hpp  Environment_yes_treadmill_subject06.hpp  Environment_yes_treadmill_subject06_new.hpp  Environment_yes_treadmill_subject06_run.hpp  main.py  main_realtime.py  main_save.py
raisimGymTorchBio/pyqt_model_runner/dt_01_force_300/: yes_treadmill_normal_150per.json
raisimGymTorchBio/pyqt_model_runner/dt_01_force_500/: yes_treadmill_run_1per.json
raisimGymTorchBio_AMP/: CMakeLists.txt
raisimGymTorchBio_AMP/pyqt_model_runner/: .json  Environment_PD_tuning.hpp  Environment_PD_tuning_new.hpp  Environment_yes_treadmill_newnewnew.hpp  Environment_yes_treadmill_subject06.hpp  main.py  main_0520.py  no_treadmill.json  yes_150_treadmill_500_005.json
raisimGymTorchBio_AMP/raisim_gym_torch.egg-info/: PKG-INFO  requires.txt
raisimGymTorch_treadmill/: README.md  Treadmill_horizon_sin_test.json  Treadmill_horizon_sin_test2.json  Treadmill_no_walk_0_01_nolimit.json  Treadmill_vertical_sin_test_pdcontrol.json  Treadmill_yes_run_0_01_30urdf_friction.json  Treadmill_yes_walk_30urdf_friction_0411_heavy.json
raisimGymTorch_treadmill/pyqt_model_runner/: .json  Environment_no_treadmill_newnew.hpp  Environment_no_treadmill_subject06.hpp  Environment_yes_treadmill_subject06_run_new.hpp  main_0518.py  main_0526.py
raisimGymTorch_treadmill/pyqt_model_runner_koo/: Environment_yes_fast.hpp  Environment_yes_slow.hpp  main.py
raisimGymTorch_treadmill/raisim_gym_torch.egg-info/: SOURCES.txt
(+3886 files in other folders)
